--- a/docs/06.DataExplorer/01.Overview.md
+++ b/docs/06.DataExplorer/01.Overview.md
@@ -9,3 +9,4 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+Composable DataExplorer allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
