--- a/docs/07.DashBoards/01.Overview.md
+++ b/docs/07.DashBoards/01.Overview.md
@@ -9,3 +9,4 @@ some_url: https://docs.composable.ai
 
 # Overview
 
+Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
