--- a/docs/04.QueryViews/02.Create-QueryView.md
+++ b/docs/04.QueryViews/02.Create-QueryView.md
@@ -53,3 +53,6 @@ Note that as you write your SQL statement, Composable checks and converst your q
 You can now switch to the View mode by clicking on the Execute button. A grid of results will appear.
 
 You can switch back and forth between Edit and View to iterate on the query. To save the QueryView, simply click on Save.
+
+!!! note
+    Once a QueryView is saved, you can share the QueryView, and also place it in a Folder or add Tags to it (found in the Info modal). A full revision history will also be available.
