--- a/docs/04.QueryViews/02.Create-QueryView.md
+++ b/docs/04.QueryViews/02.Create-QueryView.md
@@ -52,6 +52,8 @@ Note that as you write your SQL statement, Composable checks and converst your q
 
 You can now switch to the View mode by clicking on the Execute button. A grid of results will appear.
 
+![Composable QueryView View mode](img/04.02.Img_7.png)
+
 You can switch back and forth between Edit and View to iterate on the query. To save the QueryView, simply click on Save.
 
 !!! note
