--- a/docs/05.DataPortals/01.Overview.md
+++ b/docs/05.DataPortals/01.Overview.md
@@ -12,3 +12,35 @@ some_url: https://docs.composable.ai
 Composable DataPortals are a fast and easy way to set up a custom database for your data. Define your data model as a series of tables in an Excel workbook, drag it into Composable, and have the platform generate a full database, and UI, with the data model you defined.
 
 Once your database is created, you'll be taken into a web-based viewer and editor for your data. This fully customizable interface allows you or your users to create, view, and edit data in your new database in an interactive web form, with zero code or technical knowledge required.
+
+## Introduction to DataPortals
+
+Collecting, managing and viewing data, especially big or non-traditional data, often requires complex data models. But a data model is not the end of the story! A full, responsive, performant, and secure CRUD (Create, Read, Update, Delete) application needs to be designed and integrated with the data model to create a full-stack (web) application that can be used to achieve an end-to-end solution. Typically, this type of solution requires the following components to be built, implemented and tested:
+
+1. A database, with all tables, relationships and constraints required to represent the data model
+2. An ORM (object-relational mapper) layer to interact with the database
+3. Parameterizied queries for all CRUD operations
+4. Web services to allow a front-end application to manipulate the data model via an API
+5. A full, responsive, extensible web application in HTML, CSS, & JavaScript with all of the field inputs, data views, routing, authentication, account management, and search capabilities the data model demands.
+
+Composable DataPortals is an innovative capability that allows you to model data at scale. DataPortals are designed in such a way that it prioritizes the data model first and foremost, and **automating** the build-out of all the components listed above.
+
+## Benefits of DataPortals
+
+One key benefits of using DataPortals is that there is no constraint on the data model. Oftentimes, simpler tools (like form and survey generation tools) limit your data model to a totally flat table format. If it does not fit in a single row of a spreadsheet, you can not model it. That means no one-to-many relationships, no data hierarchy, no foreign-key relationships, and minimal complexity. For demanding modeling applications, you are out of luck.
+
+Another key benefit is the automated build out of the user interface. DataPortals uses the data model to create a complete web front-end for the application, without having to write a single line of html, css or javascript.
+
+Access to the data stored in a DataPortal is also a significant benefit. All data collected through a DataPortal is stored in the custom designed database, and is accesible via DataFlows, QueryViews and direct database connections.
+
+## DataPortal Creation
+
+### Define the data model and interface in Excel
+
+Using an Excel template available on the new DataPortal overview page, you can begin to model your data. Complex page hierarchies, tabbing, one-to-many relationships, layouts, groupings, display conditions, and validation rules are all supported out of the box, using a simple table-based format for defining everything.
+
+### Build the DataPortal
+
+TO build the DataPortal, simply save the Excel template, and drag and drop it into Composable. Done.
+
+Behind the scenes, Composable parses the Excel workbook, and uses it to design and generate the back-end database.Everything is robustly specified in the Excel workbook. Composable further defines the ORM layer and builds out the web application user interface.
