--- a/docs/08.WebApps/01.Overview.md
+++ b/docs/08.WebApps/01.Overview.md
@@ -10,3 +10,7 @@ some_url: https://docs.composable.ai
 # Overview
 
 Composable WebApps is a full-stack web application development resource built into the Composable DataOps Platform. Applications ranging from single-page web apps to industrial-grade, production enterprise applications can be built using WebApps, with zero or low code.
+
+## Introduction
+
+Composable is at its heart a platform founded on extensibility. Users can extend the core DataFlow engine with custom modules for their use case, actions in Composable can be scripted via the Fluent API, and automated processes can be packaged up and shared for use across an enterprise. WebApps is another extensibility point in Composable that gives users the ability to host 100% custom web applications inside a Composable instance. These front-end interfaces can leverage existing Composable web services, custom DataFlow-backed service endpoints, and parameterized QueryViews with minimal code and configuration. This means web applications can be spun up without developing or setting up a backend server/middleware — existing Composable resources are the microservices and API endpoints. On top of that, deploying as a Composable WebApp gives you user authentication and fine-grained role-based access control (RBAC) for free, built right into the Composable platform.
