--- a/docs/05.DataPortals/02.Create-DataPortals.md
+++ b/docs/05.DataPortals/02.Create-DataPortals.md
@@ -80,6 +80,7 @@ Each sheet in the Excel workbook represent a container or table. Column headings
 - Textarea: Larger string input field.
 - Telephone: Only allows valid telephone entries to be saved.
 - Voice: Experimental, a Larger string input field that allows voice input.  Only supported in Chrome.
+- [NumberFormatting](04.Number-Formatting.md): Inputted numbers are displayed in their formatted version. Subject to Locale and Options.
 
 **Columns**: Only processed for the Table ControlType.  Specifies what columns in the child sheets appear in the table for the user.  Using JSON notation, have the option to rename the column names from their defaults.  If left blank, only each record ID is shown in the table.  
 
