--- a/docs/05.DataPortals/04.Number-Formatting.md
+++ b/docs/05.DataPortals/04.Number-Formatting.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 Composable Analytics DataPortals supports number formatting functionality for numeric field inputs. Using Number Formatting, number values have the capability to be displayed as **notations**, **percents**, or **currencies**, in numeric formats specific to any locale, and subject to a number of other custom numeric specifications. In addition to granting form creators an array of formatting options to match their needs, this capability increases form readability as users are able to better understand field numeric types without the addition of text-based explanations. Easy and intuitive interpretation of input is provided to users, while database representation remains in the desired un-formatted type. 
 
 # Excel Sheet Input
-A Number Formatting field is declared using a number of columns in the Excel sheet - ControlType, Type, FormattingLocale, FormattingOptions. These provide form creators with an array of formatting options to match their numeric representation needs.
+A Number Formatting field is declared using a number of columns in the Excel sheet - ControlType, Type, FormattingLocale, FormattingOptions, Min, Max, DefaultValue. These provide form creators with an array of formatting options to match their numeric representation needs.
 
 ## ControlType
 Whenever a Number Formatting field is decalred, the value of the **ControlType** column is set to **NumberFormatting**. 
@@ -43,7 +43,19 @@ Number Formatting allows form creators to format numbers into **notations**, **p
 An array of formatting options can be found at:<br />
 [https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/NumberFormat/NumberFormat](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/NumberFormat/NumberFormat)
 
+When defining the FormattingOption, it needs to be in a readable JSON form and thus will have to be formatted correctly. Find a number of examples bellow:<br />
+- { "style":"percent" } 
+- { "style":"currency", "currency":"JPY" }
+- { "maximumSignificantDigits":"3" }
 
+## Min
+This defines the minimum possible numeric input into the NumberFormatting field and can be declared in the **Min** column. All input values below will display an error box to the user.
+
+## Max
+This defines the maximum possible numeric input into the NumberFormatting field and can be declared in the **Max** column. All input values below will display an error box to the user.
+
+## DefaultValue
+This defines the default balue that is displayed to the user and stored in number representation on the database upon initialization. It can be declared under the **DefaultValue** column.
 
 # User Experience
 The user experience for Number Formatting consists of three stages. 1) Pre-populated fields, 2) fields during numeric inputting, 3) post-populated field.
