--- a/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
+++ b/docs/01.Getting-Started/04.Public-Cloud-Deployment.md
@@ -44,9 +44,9 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
 
 # Azure Marketplace
 
-Composable is available in the Azure Marketplace at [Azure](https://azure.microsoft.com/en-in/marketplace/partners/composable/composable).
+Composable is available in the Azure Marketplace at [Azure](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/composable.composable).
 
-1. Navigate to [Azure](https://azure.microsoft.com/en-in/marketplace/partners/composable/composable) and review product information, including full pricing estimates.
+1. Navigate to [Azure](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/composable.composable) and review product information, including full pricing estimates.
     - If not already, please make sure to be logged into your Azure account, and click Get it Now.
     
     ![Azure Composable Installation Wizard](img/01.04.Azure_Install_01.png)
