Formatting and typo fixes

--- a/docs/05.DataPortals/02.Create-DataPortals.md
+++ b/docs/05.DataPortals/02.Create-DataPortals.md
@@ -21,7 +21,7 @@ You will be presented with an overview page. We urge you to read through the des
 
 Begin with one of the Excel templates provided.
 
-### Excel Sheet Structure
+### Excel Sheet Basics
 
 Each sheet in the Excel workbook represent a container or table. Column headings in a sheet is the control type, with rows representing values. The following column headers are typically found on each of the Excel sheets:
 
@@ -32,26 +32,31 @@ Each sheet in the Excel workbook represent a container or table. Column headings
 - ControlType: The type of form control that will be shown to the user to input their data for this field.
 - Required: Indicates whether the field is required.
 
-![Composable DataPortals Search](img/05.02.Img_2.png)
+![Composable DataPortals Excel](img/05.02.Img_3.png)
 
 !!! note
     Note the special case for ‘Label’ fields — DisplayName contains rich text written in Markdown.
 
-**Master**: This is the first sheet that is processed by Composable and acts as a link to all other container sheets that will ultimately be shown to the end user. This is a required sheet in the workbook. The Name given as a value here will serve as the root database name.
 
-**“Container”**:  These can be any name that is not reserved and specify what input fields are listed out in each web page the user sees, as well as any controlling logic of how they are saved and displayed.  Think of these sheets as tables in your datamodel, with each input field name representing a column in a SQL table.
+#### Sheet Types
 
-**“Category"**:  These specify a single picklist for the end user, such as Gender or State you live in.  They can be in its own sheet or in the Categories sheet.
+Your Excel template can include many sheets, of a few different types:
 
-**Categories**: On this sheet, each column represents its own category to simplify the Excel structure if you have a lot of categories in your data model.
+- **Master**: This is the first sheet that is processed by Composable and acts as a link to all other container sheets that will ultimately be shown to the end user. This is a required sheet in the workbook. The Name given as a value here will serve as the root database name.
 
-**ReadMe**: This sheet is not processed or displayed to the end user of forms, it is a place to store notes and comments on the model.
+- **“Container”**:  These can be any name that is not reserved and specify what input fields are listed out in each web page the user sees, as well as any controlling logic of how they are saved and displayed.  Think of these sheets as tables in your datamodel, with each input field name representing a column in a SQL table.
 
-**CSS**:  An optional sheet for the user to enter custom CSS rules to style the forms page with any colors, margins or other custom style behavior.
+- **“Category"**:  These specify a single picklist for the end user, such as Gender or State you live in.  They can be in its own sheet or in the Categories sheet.
+
+- **Categories**: On this sheet, each column represents its own category to simplify the Excel structure if you have a lot of categories in your data model.
+
+- **ReadMe**: This sheet is not processed or displayed to the end user of forms, it is a place to store notes and comments on the model.
+
+- **CSS**:  An optional sheet for the user to enter custom CSS rules to style the forms page with any colors, margins or other custom style behavior.
 
 #### Control Definitions
 
-(Fields with an (*) are required to process a sheet.)
+This is a comprehensive list of columns that may appear in a Container sheet. Fields with an (*) are required to process a sheet.
 
 ***Name**:­­ This is the name of the variable that is saved in the database.  The name must be unique on the page and cannot be ID or the sheet name.
 
@@ -71,7 +76,7 @@ Each sheet in the Excel workbook represent a container or table. Column headings
 - Integer: Integer input field.
 - Label: A string input that can be styled by having the DisplayName be processed as markdown. Not an input type.
 - MultiCategory: Picklist Category types where multiple selections can be made.
-- Page: Link to a signle child Container types. Not an input type.
+- Page: Link to a single child Container types. Not an input type.
 - Spin: Supported for numeric types, offers a spin clicker UI for cycling through valid numbers.
 - SSN: Only allows valid SSN entries to be saved.
 - String: String input field.
@@ -164,4 +169,4 @@ This will place this field inside the “ThirdRow” group, to the right of Fiel
 
 ## DataPortal Build
 
-TO build the DataPortal, simply save the Excel template, and drag and drop it into Composable. Done.
+To build the DataPortal, simply save the Excel template, and drag and drop it into Composable. Done.
