--- a/docs/05.DataPortals/01.Overview.md
+++ b/docs/05.DataPortals/01.Overview.md
@@ -27,7 +27,7 @@ Composable DataPortals is an innovative capability that allows you to model data
 
 ## Benefits of DataPortals
 
-One key benefits of using DataPortals is that there is no constraint on the data model. Oftentimes, simpler tools (like form and survey generation tools) limit your data model to a totally flat table format. If it does not fit in a single row of a spreadsheet, you can not model it. That means no one-to-many relationships, no data hierarchy, no foreign-key relationships, and minimal complexity. For demanding modeling applications, you are out of luck.
+One key benefit of using DataPortals is that there is no constraint on the data model. Oftentimes, simpler tools (like form and survey generation tools) limit your data model to a totally flat table format. If it does not fit in a single row of a spreadsheet, you can not model it. That means no one-to-many relationships, no data hierarchy, no foreign-key relationships, and minimal complexity. For demanding modeling applications, you are out of luck.
 
 Another key benefit is the automated build out of the user interface. DataPortals uses the data model to create a complete web front-end for the application, without having to write a single line of html, css or javascript.
 
