--- a/docs/12.Code-Promotion/03.Optional-Settings.md
+++ b/docs/12.Code-Promotion/03.Optional-Settings.md
@@ -35,13 +35,55 @@ Four options exist for [`SyncSettings.MissingKeyBehavior`](https://dev.composabl
 - [`MissingKeyBehavior.Create`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.MissingKeyBehavior.html): Create a new key on the target with the appropriate name and (if applicable) folder. Update this and any other references to the missing key (within synced resources) to the newly created key. This newly created key will have no value, which will cause resources referencing it to not work until the key is updated to have the proper value, but no updates to the DataFlows and QueryViews themselves is required. A warning is printed for every created key.
 - [`MissingKeyBehavior.Copy`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.MissingKeyBehavior.html): Copy the source key to the target, preserving its value. This is the option most likely to guarantee synced resources can run immediately after a deployment, but may result in undesired behavior if key values should be different between environments (e.g. dev and prod database connections). A warning is printed for every copied key. **It is highly recommended you review all copied values to ensure they are correct for the new environment.**
 
+### Unused Missing Keys
+
+By default, [`SyncSettings.MissingKeyBehavior`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_MissingKeyBehavior) applies only to keys that will actually be loaded by the resource that references them. In some DataFlows, it is possible to reference a key in such a way that it will not actually be loaded when running the DataFlow; the most common way to do this is to refer to a key by name on a module input while also providing a connection to that input that will override the literal value.
+
+[`SyncSettings.HandleUnusedMissingKeys`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_HandleUnusedMissingKeys) allows such "unused" keys to be treated the same as all other keys. If this setting is `true`, then all keys referenced by any resource will follow the behavior required by [`SyncSettings.MissingKeyBehavior`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_MissingKeyBehavior). Otherwise "unused" keys will be ignored.
+
 ### Require Foldered Keys
 
 By default, keys are matched by name only. If multiple keys exist with the same name but one of them is in a folder corresponding to the folder of the source key that one will be chosen, but no other folder requirements are applied. If [`SyncSettings.RequireFolderedKeys`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_RequireFolderedKeys) is `true`, then *only* keys in the target folder(s) will be considered potential matches. This option is most useful when the synced environments are on the same Composable instance but should not share keys.
 
+## Source Issues
+
+Sometimes issues with the source resources themselves will impact the behavior of a sync task.
+
+### Missing Source Resources
+
+One common issue is a resource missing from the source folder or instance. This can happen because the resource has been deleted or simply moved out of the set of folders that are being synced. By default, any missing resource referenced by a synced resource will throw an error, as it usually represents a problem with the source. The exception to this is "unused" resources (see [above](#unused-missing-keys)), which will by default only produce a warning.
+
+This behavior can be modified by [`SyncSettings.MissingSourceResourceBehavior`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_MissingSourceResourceBehavior) and [`SyncSettings.AllowUsedMissingSourceReferences`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_AllowUsedMissingSourceReferences). There are three options for `MissingSourceResourceBehavior`:
+
+- [`MissingSourceResourceBehavior.Ignore`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.MissingSourceResourceBehavior.html): References to resources that do not exist on the source will be set to null on the target.
+- [`MissingSourceResourceBehavior.Warn`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.MissingSourceResourceBehavior.html): References to resources that do not exist on the source will be set to null on the target and a warning will print. **This is the default behavior.**
+- [`MissingSourceResourceBehavior.Throw`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.MissingSourceResourceBehavior.html): References to resources that do not exist on the source will throw an exception. Because resources are saved sequentially, this may result in a partial deployment of resources, but no individual resource will be saved without all key references.
+
+By default `MissingSourceResourceBehavior` applies only to "unused" resources. To apply it to all references, set `AllowUsedMissingSourceReferences` to `true`.
+
+### Outdated DataFlow References
+
+When the inputs and outputs on a nested DataFlow change, an option appears on all references to that DataFlow to upgrade the reference. Depending on the nature of the change, unupgraded references may or may not work correctly or run at all. DataFlow upgrades potentially impact two parts of the sync process: outdated source DataFlows and outdated unsynced target DataFlows.
+
+#### Outdated Source DataFlows
+
+If a DataFlow reference has not been upgraded on the source, this may cause issues while syncing or running the DataFlow. By default such references will print a warning. This behavior can be modified by [`SyncSettings.SyncedOutdatedDataFlowReferenceBehavior`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SyncedOutdatedDataFlowReferenceBehavior), which has three options:
+ 
+- [`OutdatedDataFlowReferenceBehavior.Warn`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Print a warning about out of date nested DataFlows but do not attempt to map them. **This is the default behavior for unupgraded source DataFlows.**
+- [`OutdatedDataFlowReferenceBehavior.Throw`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Throw an exception for any out of date nested DataFlow. 
+- [`OutdatedDataFlowReferenceBehavior.Upgrade`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Automatically upgrade any out of date DataFlow references. This will not change the source DataFlow, so the synced version will be different than the source.
+
+#### Outdated Unsynced Target DataFlows
+
+If the target instance has DataFlows that reference synced DataFlows but are not themselves synced, these references will always be out of date when the inputs and outputs on the source version of the referenced DataFlow are changed. Thus the default behavior during a sync is to automatically upgrade any such target DataFlows. This behavior can be modified by [`SyncSettings.UnsyncedOutdatedDataFlowReferenceBehavior`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_UnsyncedOutdatedDataFlowReferenceBehavior), which has three options:
+ 
+- [`OutdatedDataFlowReferenceBehavior.Warn`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Print a warning about out of date nested DataFlows but do not attempt to map them.
+- [`OutdatedDataFlowReferenceBehavior.Throw`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Throw an exception for any out of date nested DataFlow. 
+- [`OutdatedDataFlowReferenceBehavior.Upgrade`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.OutdatedDataFlowReferenceBehavior.html): Automatically upgrade any out of date DataFlow references. **This is the default behavior for unupgraded unsynced target DataFlows.**
+
 ## Unsynced Resources
 
-By default, syncing will affect only the resources that exactly match those in the source folder, with a couple minor exceptions (see [here](../Possible-Issues.md)). This means that additional DataFlows and QueryViews can exist in the target folders. In some cases this may be useful, if those resources are only useful on the target server. On the other hand, this creates a disconnect between the two servers that can be confusing and sometimes is just additional clutter. One case in which the latter is more likely is when resources that were originally synced become unneeded for the project and are moved or deleted from the source folder. In this case, with the default behavior of [`FolderSyncer.Sync`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.FolderSyncer.html#CompAnalytics_IServices_Deploy_FolderSyncer_Sync) the target versions of those resources will remain in place unless moved or deleted manually.
+By default, syncing will affect only the resources that exactly match those in the source folder, with a couple minor exceptions (see [here](04.Possible-Issues.md)). This means that additional DataFlows and QueryViews can exist in the target folders. In some cases this may be useful, if those resources are only useful on the target server. On the other hand, this creates a disconnect between the two servers that can be confusing and sometimes is just additional clutter. One case in which the latter is more likely is when resources that were originally synced become unneeded for the project and are moved or deleted from the source folder. In this case, with the default behavior of [`FolderSyncer.Sync`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.FolderSyncer.html#CompAnalytics_IServices_Deploy_FolderSyncer_Sync) the target versions of those resources will remain in place unless moved or deleted manually.
 
 ### UnsyncedResourceBehavior
 
@@ -53,6 +95,12 @@ By default, syncing will affect only the resources that exactly match those in t
 - [`UnsyncedResourceBehavior.Delete`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.UnsyncedResourceBehavior.html): Delete unmatched resources.
 
 ## Other
+
+### Sync Recent Modifications
+
+By default, all resources in the synced folder are synced, even if they already exist in the target folder. This behavior can be changed by using [`SyncSettings.SyncChangesAfterDateTimeOffset`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SyncChangesAfterDateTimeOffset). If a `DateTimeOffset` is provided for this field, only resources that have been updated on the source after the provided date and time will be synced. For common iterated code promotion scenarios, use a `DateTimeOffset` slightly before the last time code was synced to the target to capture all new changes from the source.
+
+Note that some resources might be updated on the target even if they have not been updated on the source if they depend on other resources that were synced.
 
 ### Resource Transformation
 
