--- a/docs/12.Code-Promotion/04.Possible-Issues.md
+++ b/docs/12.Code-Promotion/04.Possible-Issues.md
@@ -28,7 +28,7 @@ Thus we need to add `"CompAnalytics.Extension.SpreadSheet"` to [`SyncSettings.Ex
 
 Another common issue that can cause a deployment failure is a DataFlow or QueryView that references another DataFlow or QueryView that is not in the set of synced folders. Because such references need to be updated to continue working correctly on the target instance, all referenced DataFlows or QueryViews must be a part of the sync. References can cross between folders, but all folders must be included as the [`FolderMapping.Source`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.FolderMapping.html#CompAnalytics_IServices_Deploy_FolderMapping_Source) for some folder mapping.
 
-If a synced DataFlow references another DataFlow that's not a part of the sync, you'll get a `System.Collections.Generic.KeyNotFoundException`. If running in Visual Studio you can get the `sourceAppId` and search on the source Composable instance with `id:12345` to find the referenced DataFlow. If this DataFlow is one that should be synced, either add it to a folder that is being synced or add the folder that it's already in to the sync. Be sure that this is safe to do with regard to folder permissions and/or other resources in the same folder. If the referenced DataFlow should not be synced, you can find which other DataFlows reference it on the right hand side of the DataFlow page by clicking "Referrers":
+If a synced DataFlow references another DataFlow that's not a part of the sync, you'll get an `InvalidOperationException` with the ID of the missing DataFlow. You can search on the source Composable instance with `id:12345` to find the referenced DataFlow. If this DataFlow is one that should be synced, either add it to a folder that is being synced or add the folder that it's already in to the sync. Be sure that this is safe to do with regard to folder permissions and/or other resources in the same folder. If the referenced DataFlow should not be synced, you can find which other DataFlows reference it on the right hand side of the DataFlow page by clicking "Referrers":
 
 ![Missing Assembly Input Type](img/Referrers.png)
 
@@ -36,11 +36,13 @@ The DataFlow that was failing during sync will be one of these, so you can edit 
 
 The error message and troubleshooting steps are similar for references to QueryViews from either DataFlows or other QueryViews.
 
+Also note that the missing source behavior can be modified by the [Optional Settings.](03.Optional-Settings.md#missing-source-resources)
+
 ## Other Considerations
 
 ### Old References in Unsynced DataFlows
 
-To allow for cases where some DataFlow may be necessary only on a target instance that requires a reference to a synced DataFlow, the deployment API will scan the target instance for references to synced DataFlows and attempt to update them so they continue working as they did before the sync, but with the new version of the referenced DataFlow. This mapping may fail, however, if the inputs and outputs of the referenced DataFlow have changed. It may be necessary to manually delete the reference and re-add it after deployment to solve this issue.
+To allow for cases where some DataFlow may be necessary only on a target instance that requires a reference to a synced DataFlow, by default the deployment API will scan the target instance for references to synced DataFlows and attempt to update them so they continue working as they did before the sync, but with the new version of the referenced DataFlow. If this upgrade step has been disabled via the settings (see [Optional Settings](03.Optional-Settings.md#outdated-dataflow-references)) or the upgrade is compatible with the target DataFlow it may be necessary to manually delete the reference and re-add it after deployment.
 
 ### Name Collisions
 
